Adicionando autenticação via cookie-parser e jwt
