# middleware/autenticacao.js
@@ -1,12 +1,28 @@
 import jwt from 'jsonwebtoken';
+import UsuarioModel from '../models/usuarioModel.js';
 
 const JWT_SEGREDO = 'M3H4CK34R4M'
 
 export default class Autenticacao {
-    validar(req, res, next){
-        jwt.verify()
-        if(req.headers.chaveapi == "PFSII"){
-            next();
+    async validar(req, res, next){
+        if(req.cookies.jwt){
+            try{
+                let jwt = req.cookies.jwt;
+                let usuario = jwt.verify(jwt, JWT_SEGREDO);
+                let usuarioModel = new UsuarioModel();
+                usuarioModel = await usuarioModel.obter(usuario.usuId);
+                
+                if(usuarioModel != null){
+                    next()
+                }
+                else{
+                    res.status(401).json({msg: "Usuario invalido!"});
+                }
+
+            }
+            catch{
+                res.status(401).json({msg: "Não autorizado!"});
+            }
         }
         else{
             res.status(401).json({msg: "Não autorizado!"});
