# routes/usuariosRoute.js
@@ -11,7 +11,7 @@ router.get('/', auth.validar, (req, res) => {
     // #swagger.tags = ['Usuários']
     // #swagger.summary = 'Lista os usuários cadastrados'
     /* #swagger.security = [{
-        apiKeyAuth: ['PFSII']
+        apiKeyAuth: []
     }]
     */
     ctrl.listar(req, res);
@@ -21,7 +21,7 @@ router.get('/:id', auth.validar, (req, res) => {
     // #swagger.tags = ['Usuários']
     // #swagger.summary = 'Obtém um usuário pelo ID'
     /* #swagger.security = [{
-        apiKeyAuth: ['PFSII']
+        apiKeyAuth: []
     }]
     */
     ctrl.obter(req, res);
@@ -31,7 +31,7 @@ router.post('/', auth.validar, (req, res) => {
     // #swagger.tags = ['Usuários']
     // #swagger.summary = 'Cria um novo usuário'
     /* #swagger.security = [{
-        apiKeyAuth: ['PFSII']
+        apiKeyAuth: []
     }]
     #swagger.requestBody = {
         required: true,
@@ -50,7 +50,7 @@ router.delete('/excluir/:id', auth.validar, (req, res) => {
     // #swagger.tags = ['Usuários']
     // #swagger.summary = 'Exclui um usuário pelo ID'
     /* #swagger.security = [{
-        apiKeyAuth: ['PFSII']
+        apiKeyAuth: []
     }]
     */
     ctrl.excluir(req, res); 
@@ -60,7 +60,7 @@ router.put('/', auth.validar, (req, res) => {
     // #swagger.tags = ['Usuários']
     // #swagger.summary = 'Atualiza um ou mais atributos dos usuários'
     /* #swagger.security = [{
-        apiKeyAuth: ['PFSII']
+        apiKeyAuth: []
     }]
     #swagger.requestBody = {
         required: true,
@@ -80,7 +80,7 @@ router.patch('/alterar-email/:id', auth.validar, (req, res) => {
     // #swagger.summary = 'Altera o e-mail de um usuário'
     // #swagger.parameters['id'] = { description: 'ID do usuário que terá o email atualizado' }
     /* #swagger.security = [{
-        apiKeyAuth: ['PFSII']
+        apiKeyAuth: []
     }]
     */
     ctrl.alterarEmail(req, res);
