# server.js
@@ -3,6 +3,7 @@ import usuarioRoute from './routes/usuariosRoute.js'
 import perfilRoute from './routes/perfilRoute.js'
 import loginRoute from './routes/loginRoute.js'
 import imovelRoute from './routes/imovelRoute.js'
+import cookieParser from 'cookie-parser';
 
 import { createRequire } from 'module';
 const require = createRequire(import.meta.url);
@@ -13,6 +14,7 @@ import swaggerUi from 'swagger-ui-express'
 
 const app = express();
 
+app.use(cookieParser());
 app.use(express.json());
 
 //pag de documentação
@@ -24,7 +26,7 @@ app.use('/login', loginRoute);
 app.use('/imovel',
     /*  #swagger.tags = ['Imóvel']
         #swagger.security = [{
-        apiKeyAuth: ['PFSII']
+        apiKeyAuth: []
     }]
     */
 imovelRoute);
